--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,9 @@
-init:
-  - git config --global core.autocrlf input
-
-version: '{build}'
-
 environment:
   matrix:
     - nodejs_version: '4'
     - nodejs_version: '6'
-
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install --production
-  - npm install postcss tape
-
+  - npm install
 build: off
-
-test_script:
-  - ps: 'node test.js #PowerShell'
-  - cmd: node test.js
-
-cache:
-  - node_modules
+test_script: node test.js
