--- a/package.json
+++ b/package.json
@@ -1,53 +1,44 @@
 {
-  "name": "postcss-color-gray",
-  "version": "4.0.0",
-  "description": "PostCSS plugin to transform gray() function to today's CSS",
-  "repository": "https://github.com/postcss/postcss-color-gray.git",
-  "author": {
-    "name": "Shinnosuke Watanabe",
-    "url": "https://github.com/shinnn"
-  },
-  "scripts": {
-    "pretest": "npm run eslint",
-    "eslint": "eslint index.js test.js",
-    "jscs": "jscs index.js test.js",
-    "test": "node test.js | tap-spec",
-    "coverage": "istanbul cover test.js",
-    "coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls",
-    "release": "npmpub"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/postcss/postcss-color-gray/blob/master/LICENSE"
-    }
-  ],
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "css",
-    "css4",
-    "style",
-    "stylesheet",
-    "postcss",
-    "postcss-plugin",
-    "color",
-    "gray",
-    "function"
-  ],
-  "dependencies": {
-    "color": "^1.0.3",
-    "postcss": "^6.0.1",
-    "postcss-message-helpers": "^2.0.0",
-    "reduce-function-call": "^1.0.2"
-  },
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "istanbul": "^0.4.5",
-    "istanbul-coveralls": "^1.0.3",
-    "npmpub": "^3.1.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.3"
-  }
+	"name": "postcss-color-gray",
+	"version": "4.0.0",
+	"description": "PostCSS plugin to transform gray() function to today's CSS",
+	"repository": "postcss/postcss-color-gray",
+	"author": "Shinnosuke Watanabe (https://github.com/shinnn)",
+	"scripts": {
+		"pretest": "eslint --fix --format=codeframe index.js test.js",
+		"test": "nyc --reporter=text --reporter=html node test.js",
+		"release": "npmpub"
+	},
+	"license": "MIT",
+	"files": [
+		"index.js"
+	],
+	"keywords": [
+		"css",
+		"css4",
+		"style",
+		"stylesheet",
+		"postcss",
+		"postcss-plugin",
+		"color",
+		"convert",
+		"gray",
+		"function"
+	],
+	"dependencies": {
+		"color": "^2.0.1",
+		"postcss": "^6.0.14",
+		"postcss-message-helpers": "^2.0.0",
+		"reduce-function-call": "^1.0.2"
+	},
+	"devDependencies": {
+		"@shinnn/eslint-config-node": "^5.0.0",
+		"eslint": "^4.13.1",
+		"npmpub": "^3.1.0",
+		"nyc": "^11.4.0",
+		"tape": "^4.8.0"
+	},
+	"eslintConfig": {
+		"extends": "@shinnn/node"
+	}
 }
