test on the latest Node.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ branches:
 language: node_js
 node_js:
   - '4'
-  - '6'
 after_script: node_modules/.bin/nyc report --reporter=text-lcov | npx coveralls
+  - node
