switch from MIT license to ISC license
https://opensource.org/licenses/ISC

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "nyc --reporter=text --reporter=html node test.js",
 		"release": "npmpub"
 	},
-	"license": "MIT",
+	"license": "ISC",
 	"files": [
 		"index.js"
 	],
