--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-.nyc_output
-coverage
 node_modules
+index.*.js
+package-lock.json
+*.log*
+*.result.css
+.*
+!.editorconfig
+!.gitignore
+!.rollup.js
+!.tape.js
+!.travis.yml
