--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
-branches:
-  except: /^v\d/
+# https://docs.travis-ci.com/user/travis-lint
+
 language: node_js
+
 node_js:
-  - '4'
-  - node
-script: if [[ `node --version` != v4.* ]];
-  then npm test;
-  else node test.js;
-  fi;
-after_script: if [[ `node --version` != v4.* ]];
-  then node_modules/.bin/nyc report --reporter=text-lcov | npx coveralls;
-  fi;
+  - 6
+
+install:
+  - npm install --ignore-scripts
