--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ language: node_js
 
 node_js:
   - 6
+  - 7
+  - 8
+  - 9
+  - 10
 
 install:
   - npm install --ignore-scripts
+
+script:
+  - npm test
