--- a/package.json
+++ b/package.json
@@ -7,42 +7,31 @@
   "repository": "postcss/postcss-color-gray",
   "homepage": "https://github.com/postcss/postcss-color-gray#readme",
   "bugs": "https://github.com/postcss/postcss-color-gray/issues",
-  "main": "index.cjs.js",
-  "module": "index.es.js",
-  "files": [
-    "index.cjs.js",
-    "index.es.js"
-  ],
+  "main": "index.js",
   "scripts": {
     "prepublishOnly": "npm test",
-    "pretest": "rollup -c .rollup.js --silent",
     "test": "echo 'Running tests...'; npm run test:js && npm run test:tape",
-    "test:ec": "echint --ignore index.*.js test",
     "test:js": "eslint *.js --cache --ignore-path .gitignore --quiet",
     "test:tape": "postcss-tape"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=10.0.0"
   },
   "dependencies": {
-    "@csstools/convert-colors": "^1.4.0",
-    "postcss": "^7.0.5",
-    "postcss-values-parser": "^2.0.0"
+    "@csstools/convert-colors": "^2.0.0",
+    "postcss-values-parser": "^5.0.0"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.6.1",
+    "postcss": "^8.2.8",
+    "eslint": "^7.22.0",
     "eslint-config-dev": "^2.0.0",
-    "postcss-tape": "^2.2.0",
-    "pre-commit": "^1.2.2",
-    "rollup": "^0.66.5",
-    "rollup-plugin-babel": "^4.0.1"
+    "postcss-tape": "^6.0.0"
   },
   "eslintConfig": {
-    "extends": "dev",
-    "parser": "babel-eslint"
+    "extends": "dev"
   },
   "keywords": [
     "postcss",
